--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dancing+Script|Fira+Sans|Indie+Flower|Permanent+Marker"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
