--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
       href="https://fonts.googleapis.com/css?family=Dancing+Script|Fira+Sans|Indie+Flower|Permanent+Marker"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
