--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <link
+      href="https://fonts.googleapis.com/css?family=Baloo"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Dancing+Script|Fira+Sans|Indie+Flower|Permanent+Marker"
       rel="stylesheet"
     />
